tests/pos/incremental/src/main/scala/Top.scala
@main def top(): Unit = println(Middle.process(Base(42)))
